# financials

./: .env.example  .gitignore  QUICKSTART.txt  README.md  app.py  config.yaml  pyproject.toml  requirements.txt  vercel.json
api/: index.py
data/user/: .gitkeep
public/static/: app.js  index.html  style.css
scripts/: Install 6am Daily Scan.bat  Install Web Autostart.bat  install-morning-task.ps1  install-web-autostart.ps1  run-scheduled-scan.bat  run-scheduled.bat  scheduled-scan.bat  setup.ps1  start-web-background.bat  start-web.bat
stockscanner/: __init__.py  __main__.py  cli.py  config.py  data.py  eval_context.py  filters.py  indicators.py  plan.py  regime.py  scanner.py  score_breakdown.py  scoring.py  sectors.py  universe.py
stockscanner/alerts/: __init__.py  discord.py  dispatcher.py  email_alert.py  formatter.py  state.py
stockscanner/data/: sp500_symbols.json
stockscanner/intraday/: __init__.py  scanner.py
stockscanner/portfolio/: __init__.py  review.py
stockscanner/reversal/: __init__.py  scanner.py
stockscanner/signals/: breakout.py  confirmers.py  earnings.py  empirical.py  pullback.py  quality.py
stockscanner/web/: __init__.py  app.py  scheduler.py  service.py  store.py
stockscanner/web/static/: app.js  index.html  style.css
