[project]
name = "financials"
version = "1.0.0"
description = "Empirical swing scanner with portfolio hold ratings"
requires-python = ">=3.11"
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "pyyaml>=6.0",
    "requests>=2.31.0",
    "lxml>=4.9.0",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "apscheduler>=3.10.0",
    "rich>=13.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["stockscanner*"]

[tool.setuptools.package-data]
"stockscanner.web" = ["static/*"]

[tool.vercel]
entrypoint = "app:app"
